# yad

./: Cargo.toml  readme.md
examples/: main.rs
src/: lib.rs  main.rs
src/constants/: error.rs  headers.rs  mod.rs  types.rs
src/core/: bytes.rs  error_messages.rs  key.rs  mod.rs  parser_tools.rs  row.rs  serializer_tools.rs  structs.rs  value.rs  version.rs  yad.rs
src/deserializer/: mod.rs
src/ffi/: mod.rs  row.rs  yad.rs
src/ffi/tools/: c_array.rs
src/ffi/value/: _32b_functions.rs  _8b_functions.rs  _bool_functions.rs  _string_functions.rs  mod.rs
src/serializer/: mod.rs
test/: test.yad
test/ffi/: tsconfig.json
test/ffi/src/: index.ts
